--- a/blog-app-fe/package.json
+++ b/blog-app-fe/package.json
@@ -15,6 +15,8 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
